src/test/testData/parser/good/StatementPlot.basic
Plot1(Boxplot,A,B+1,plotcross,BLUE)
Plot2(Histogram,A,B+1
Plot3(xyLine,1,2,squareplot)