src/test/testData/parser/bad/StatementPlot.basic
Plot1
Plot1(
Plot1(A
Plot1(Boxplot
Plot1(Boxplot,
Plot1(Boxplot,1
Plot1(Boxplot,1,
Plot1(Boxplot,1,2,
Plot1(Boxplot,1,2,plotcros
Plot1(Boxplot,1,2,plotcross,
Plot1(Boxplot,1,2,plotcross,)